# visualize-physics

./: .gitignore  LICENSE  QUANTUM_STATISTICAL_PHYSICS_BLUEPRINT.md  README.md  VISUALIZE_PHYSICS_ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
assets/: index-2-wDzcV8.js  index-BFJ2XBy-.css  index-BdHKhftf.css  index-CDSvr-fn.js  index-CHYulenG.css  index-CnPqTLx1.js  index-CpxbGmqB.js  index-DASTbUfs.css  index-X7XhBboQ.js  index-xe97jUXQ.css
public/: manifest.webmanifest  sw.js
scripts/: renumber.mjs
src/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  quantum_probability.rs
src/chapters/: Home.tsx
src/components/: CatLogo.tsx  ChapterPage.tsx  CommandPalette.tsx  InlineMath.tsx  Layout.tsx  MathBlock.tsx  Sidebar.tsx  ToolMiniSim.tsx
src/lib/: bookmarks.ts  chapters-data.ts  theme.ts
src/simulations/: C1ProjectileMotion.tsx  C2DoublePendulum.tsx  C3CentralForce.tsx  C4RigidBody.tsx  C5CoupledOscillators.tsx  C6Lagrangian.tsx  C7HamiltonianPhaseSpace.tsx  C8NoetherTheorem.tsx  E1ElectricField.tsx  E2MagneticField.tsx  E3EMWaves.tsx  E4Induction.tsx  E5Multipole.tsx  F1Foundations.tsx  F2MatterEnergy.tsx  F3LawsOfMotion.tsx  G1Gravity.tsx  G2Cosmology.tsx  G3Embedding.tsx  M1MathMethods.tsx  M2MathTools.tsx  N1Nuclear.tsx  N2Particle.tsx  O1Optics.tsx  Q1Amplitudes.tsx  Q1Measurement.tsx  Q1Superposition.tsx  Q2SequentialSG.tsx  Q2SingleSG.tsx  Q3ParticleInBox.tsx  (+35 more)
(+1 files in other folders)
