[package]
name = "visualize-physics"
version = "0.9.0"
edition = "2021"

[lib]
name = "visualize_physics_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.17"
num-complex = "0.4"
